--- a/style/general.css
+++ b/style/general.css
@@ -5,3 +5,7 @@ body {
     background-color: rgb(100, 100, 100);
     box-shadow: 0 0 5vh 1vh rgb(0,0,0) inset;
 }
+
+html{
+    scroll-behavior: smooth;
+}
