--- a/style/contact.css
+++ b/style/contact.css
@@ -68,6 +68,8 @@
     padding-right: 40px;
     border-radius: 10px;
     transition: 0.25s;
+    box-shadow: 0 0 5vh 1vh rgb(0, 0, 0);
+    opacity: 0.7;
 }
 
 
@@ -95,6 +97,8 @@ form input,form textarea{
     border-radius: 10px;
     color: rgb(25,25,25);
     font-weight: 600;
+    box-shadow: 0 0 5vh 1vh rgb(0, 0, 0);
+    opacity: 0.7;
 }
 
 form textarea{
