--- a/style/home.css
+++ b/style/home.css
@@ -27,11 +27,17 @@
     font-weight: 600;
     color: rgb(200, 200, 200);
     font-size: 1.25vw;
-    transition: 0.25s;
+    transition: 0.5s;
+    background-color: rgb(25, 25, 25);
+    box-shadow: 0 0 5vh 1vh rgb(0, 0, 0);
+    padding: 10px;
+    border-radius: 10px;
+    opacity: 0.95;
 }
 
 .header ul li a:hover{
-    color: cyan;
+    background-color: rgb(0, 171, 171);
+    color: rgb(25, 25, 25);
 }
 
 .main_text {
